[gd_scene load_steps=13 format=1]

[ext_resource path="res://Assets/Sprites/Enemy01Idle/01.png" type="Texture" id=1]
[ext_resource path="res://Assets/Sprites/Enemy01Idle/02.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/Enemy01Idle/03.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/Enemy01Idle/04.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/Enemy01Idle/05.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/Enemy01Idle/06.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sprites/Enemy01Chop/01.png" type="Texture" id=7]
[ext_resource path="res://Assets/Sprites/Enemy01Chop/02.png" type="Texture" id=8]
[ext_resource path="res://Scripts/Actor.gd" type="Script" id=9]
[ext_resource path="res://Scripts/Area2D.gd" type="Script" id=10]

[sub_resource type="SpriteFrames" id=1]

animations = [ { "frames":[ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ], "loop":true, "name":"idle", "speed":5.0 }, { "frames":[ ExtResource( 7 ), ExtResource( 8 ) ], "loop":false, "name":"chop", "speed":5.0 } ]

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 16, 16 )

[node name="Enemy1" type="AnimatedSprite" groups=[ "enemy" ]]

frames = SubResource( 1 )
animation = "idle"
frame = 2
playing = true
centered = false
script/script = ExtResource( 9 )
damage = 10
energy = 2

[node name="Area2D" type="Area2D" parent="."]

visibility/light_mask = 4
transform/pos = Vector2( 16, 16 )
input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision/layers = 4
collision/mask = 0
script/script = ExtResource( 10 )
scale = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]

shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="RayCast2DRight" type="RayCast2D" parent="."]

transform/pos = Vector2( 16, 16 )
enabled = true
cast_to = Vector2( 32, 0 )
layer_mask = 7
type_mask = 16

[node name="RayCast2DDown" type="RayCast2D" parent="."]

transform/pos = Vector2( 16, 16 )
enabled = true
cast_to = Vector2( 0, 32 )
layer_mask = 7
type_mask = 16

[node name="RayCast2DLeft" type="RayCast2D" parent="."]

transform/pos = Vector2( 16, 16 )
enabled = true
cast_to = Vector2( -32, 0 )
layer_mask = 7
type_mask = 16

[node name="RayCast2DUp" type="RayCast2D" parent="."]

transform/pos = Vector2( 16, 16 )
enabled = true
cast_to = Vector2( 0, -32 )
layer_mask = 7
type_mask = 16


